@@ -285,18 +285,19 @@ compiles the specified lisp files to a platform-independent
  <term><option>-v</option></term>
  <term><option>--verbose</option></term>
  <listitem><simpara>Change verbosity level: by default, &clisp; displays a
- banner at startup and a good-bye message when quitting, and initializes
- &load-verbose-var; and &compile-verbose-var; to &t;, and
- &load-print-var; and &compile-print-var; to &nil;, as per &ansi-cl;.
- The first <option>-q</option> removes the banner and the good-bye message,
- the second sets variables &load-verbose-var; and &compile-verbose-var; to
- &nil;.  <option>-v</option> sets variables &err-pr-bt;, &load-print-var; and
- &compile-print-var; to &t;.  These settings affect the output produced by
- <option><link linkend="opt-init">-i</link></option> and
- &opt-c; options.
- Note that these settings persist into the &repl;.
- Repeated <option>-q</option> and <option>-v</option> cancel each other, e.g.,
- <option>-q -q -v -v -v</option> is equivalent to <option>-v</option>.
+   banner at startup and a good-bye message when quitting, and initializes
+   &load-verbose-var; and &compile-verbose-var; to &t;, and
+   &load-print-var; and &compile-print-var; to &nil;, as per &ansi-cl;.
+   The first <option>-q</option> removes the banner and the good-bye
+   message, the second sets variables &load-verbose-var; and
+   &compile-verbose-var; to &nil;.
+   The first <option>-v</option> sets variables &err-pr-bt;,
+   &load-print-var; and &compile-print-var; to &t;, the second sets
+   &load-echo; to &t;.
+   These settings affect the output produced by &opt-i; and &opt-c; options.
+   Note that these settings persist into the &repl;.
+   Repeated <option>-q</option> and <option>-v</option> cancel each other,
+   e.g., <option>-q -q -v -v -v</option> is equivalent to <option>-v</option>.
 </simpara></listitem></varlistentry>
 
 <varlistentry id="opt-on-error">
